# Spherinator

./: .flake8  .gitignore  .gitmodules  .readthedocs.yaml  CITATION.cff  GalaxyZooDataModule.py  HiPSter.py  Preprocessing.py  README.md  RotationalSphericalProjectingAutoencoder.py  SphericalProjectingAutoencoder.py  cli-svae.py  cli-vae.py  config.yaml  create_allsky.py  create_jpgs.py  demo.yaml  environment.yml  export-to-onnx.py  hipster.py  jasmine_data.py  main-demo.py  main.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  rot-vae-cli.py  rot-vae-forward-test.py  rot-vae-onnx.py  spherinator.py  svae-fit.py  test-bce-predict.ipynb  test-bce-predict.py  test-bce.py  test-predict.ipynb  test-svae.py  test-torch-gpu.py  test.py  (+3 more)
.github/: check.sh  dependabot.yml
.github/workflows/: python-package.yml  release.yml
callbacks/: __init__.py  log_reconstruction_callback.py
data/: DataSets.py  GalaxyZooDataModule.py  MNISTDataModule.py  Preprocessing.py  __init__.py  galaxy_zoo_data_module.py  galaxy_zoo_dataset.py  illustris_sdss_data_module.py  illustris_sdss_data_module_multidim.py  illustris_sdss_dataset.py  illustris_sdss_dataset_multidim.py  illustris_sdss_dataset_with_metadata.py  image_dataset.py  preprocessing.py  shapes_data_module.py  shapes_dataset.py  shapes_dataset_with_metadata.py  spherinator_data_module.py  spherinator_dataset.py  visualization.py
devel/: check-illustris-power-reconstruction.ipynb  check-model.ipynb  check-shapes-power-reconstruction.ipynb  dataloader_skirt.ipynb  export-jit.py  export-onnx.py  flux_error.ipynb  flux_error_gaiaxpy.ipynb  power-compile.py  power-jit.py  power-kl-divergence.ipynb  power-spherical-compile.py  power_spherical.ipynb  rot-vae-cli.py  rot-vae-jit.py  rot-vae-onnx.py  simple-compile.py  simple-jit.py  svae-cli.py  svae-kl-divergence.ipynb  svae-predict.py  test-bce-predict.ipynb  test-bce.py  test-predict.ipynb  test-pyg.ipynb  test-resnet.ipynb  test-svae.py  test-tensor-cores.py
docs/: api.md  conf.py  contributing.md  development.md  hipster.md  index.md  index.rst  installation.md  pest.md  references.bib  requirements.txt  spherinator.md  training.md  workflow_orchestration.md
experiments/: Illustris.yaml  IllustrisSVAE.yaml  ae-gmr-resnet.yaml  callback_best_model.yaml  callback_log_reconstructions.yaml  config.yaml  dual_head_vae_gmr_resnet.yaml  efigi-wandb.yaml  efigi.yaml  gaia.yaml  gaia_vae_8.yaml  gaia_wandb.yaml  galaxy_zoo_power.yaml  gmr-resnet.yaml  gmr-unet.yaml  gz-svae.yaml  gz.yaml  illustris-power-zdim16.yaml  illustris-power-zdim32.yaml  illustris-power-zdim4.yaml  illustris-power-zdim64.yaml  illustris-power-zdim8.yaml  illustris-power.yaml  illustris-svae-test.yaml  illustris-svae.yaml  illustris-test.yaml  illustris.yaml  illustris_aug.yaml  illustris_autoencoder.yaml  illustris_power-mmd_loss_single.yaml  illustris_power.yaml  illustris_power_mmd-loss.yaml  illustris_power_single_norot.yaml  illustris_small.yaml  illustris_small_new.yaml  illustris_svae-mmd_loss.yaml  illustris_svae.yaml  illustris_vae.yaml  mnist.yaml  mnist_ae_cnn.yaml  (+25 more)
gaia/: convert.py  convert_xp_continuous.py  convert_xp_sampled.py  data.ipynb  export_onnx.ipynb  export_onnx_general.ipynb  export_onnx_vae.ipynb  export_onnx_vae_calibrate.ipynb  export_onnx_vae_dense.ipynb  flux_error_gaiaxpy.ipynb  gaia_ae_8_trunc_normal.yaml  kl_divergence.ipynb  loss.ipynb  normal_dist.ipynb  normalize.ipynb  onnx_reconstruction.ipynb  onnx_vae_dense_reconstruction.ipynb  onnx_vae_reconstruction.ipynb  power_spherical.ipynb  power_spherical_float32.ipynb  power_spherical_float64.ipynb  power_spherical_test.ipynb  reconstruction.ipynb  test.ipynb  truncated_normal.ipynb  visualize_xp_sampled_parquet.ipynb  weights_provider.ipynb  xp_continuous_mean_spectrum.ipynb  xp_sampled_mean_sprectrum.ipynb  yaml2model.ipynb
gaia/devel/: convert.py  convert_csv_to_parquet.py  test.ipynb
hipster/: __init__.py  create_allsky.py  create_images.py  create_jpgs.py  hipster.py  hipster_multidim.py
models/: RotationalSphericalProjectingAutoencoder.py  RotationalVAE.py  SphericalProjectingAutoencoder.py  __init__.py  convolutional_decoder.py  convolutional_decoder_256.py  convolutional_encoder.py  rotational_autoencoder.py  rotational_autoencoder_cartesian.py  rotational_spherical_autoencoder.py  rotational_spherical_projecting_autoencoder.py  rotational_spherical_variational_autoencoder.py  rotational_variational_autoencoder.py  rotational_variational_autoencoder_mmd.py  rotational_variational_autoencoder_power.py  rotational_variational_autoencoder_power_mmd.py  rotational_variational_autoencoder_power_norot.py  simple.py  spherinator_module.py  svae.py  vae.py
parquet/: README.md  convert.py  convert2.py  data.parquet  litdata_example.py  litdata_optimize.py  litdata_streaming_dataloader.py  parquet.ipynb  pyarrow.py  read-parquet.ipynb
src/: hipster.py  spherinator.py
src/data/: galaxy_zoo_data_module.py  (+6 more)
sweeps/: README.md  input.yaml  sweep.yaml  train.py
tests/: conftest.py  test_autoencoder.py  test_autoencoder_pure.py  test_cnn.py  test_cnn_1d.py  test_cnn_1d_gen.py  test_cnn_2d.py  test_combined_loss.py  test_dense_model.py  test_dynamo_export.py  test_gmr_resnet.py  test_hipster.py  test_huggingface_encoders.py  test_illustris_sdss_data_module.py  test_images_data_module.py  test_images_dataset.py  test_iterable_parquet_dataset.py  test_kl_annealing.py  test_log_reconstruction_callback.py  test_mlp.py  test_mnist_data_module.py  test_onnx_export.py  test_param_manager.py  test_parquet_dataset.py  test_parquet_iterable_dataset.py  test_power_spherical.py  test_resnet.py  test_rotational_autoencoder.py  test_rotational_spherical_variational_autoencoder.py  test_rotational_variational_autoencoder.py  test_rotational_variational_autoencoder_power.py  test_shapes_data_module.py  test_shapes_dataset.py  test_ssim_loss.py  test_torch.py  test_torch_loss.py  test_variational_autoencode.py  test_variational_autoencoder.py  test_variational_autoencoder_pure.py  test_von_mises_fisher.py  (+1 more)
(+118 files in other folders)
