[project]
name = "spherinator"
version = "0.4.0"
description = "Rotation-Invariant Hyperspherical Variational Convolutional Autoencoder"
authors = [
  {name = "Kai Polsterer", email = "kai.polsterer@h-its.org"},
  {name = "Bernd Doser", email = "bernd.doser@h-its.org"},
  {name = "Andreas Fehlner", email = "andreas.fehlner@h-its.org"},
  {name = "Sebastian T. Gomez", email = "sebastian.trujillogomez@h-its.org"},
]
license = "Apache-2.0"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "jsonargparse[signatures] >=4.37",
    "lightning >=2.1",
    "matplotlib >=3.10",
    "numpy >=2.2, <3.0",
    "onnx >=1.15",
    "onnxscript >=0.3",
    "pandas >=2.1",
    "power-spherical >=0.8",
    "scikit-image >=0.25",
    "scipy >=1.11",
    "torch >=2.2",
    "torchvision >=0.20",
    "gaiaxpy >=2.1",
    "pyarrow >=19.0",
    "wandb >=0.20",
]

[project.optional-dependencies]
dev = [
    "ipykernel >=6.29",
    "pytest >=8.3",
    "ruff >=0.11",
]
extra = [
    "jupytext >=1.15",
    "pip-licenses >=5.0",
    "pytest-cov >=6.1",
    "scikit-learn >=1.3",
    "tensorboard >=2.15",
]
docs = [
    "myst-parser >=4.0",
    "recommonmark >=0.7",
    "sphinx >= 8.1",
    "sphinx-autodoc-typehints >= 2.5",
    "sphinx-rtd-theme >= 3.0",
]

[project.scripts]
spherinator = 'spherinator.main:main'

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest]
timeout = 300
testpaths = 'tests'
xfail_strict = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:The 'train_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument",
    "ignore:torch.onnx.dynamo_export only implements opset version 18 for now.",
    "ignore:GPU available but not used.",
    "ignore:You requested to overfit but enabled train dataloader shuffling.",
    "ignore::FutureWarning",
]

[tool.pylint.TYPECHECK]
generated-members = 'numpy.*, torch.*'
