[project]
name = "spherinator"
version = "0.5.1"
description = "Rotation-Invariant Hyperspherical Variational Convolutional Autoencoder"
authors = [
  {name = "Kai Polsterer", email = "kai.polsterer@h-its.org"},
  {name = "Bernd Doser", email = "bernd.doser@h-its.org"},
  {name = "Andreas Fehlner", email = "andreas.fehlner@h-its.org"},
  {name = "Sebastian T. Gomez", email = "sebastian.trujillogomez@h-its.org"},
]
license = "Apache-2.0"
readme = "README.md"

requires-python = ">=3.12,<4.0"
dependencies = [
    "jsonargparse[signatures] >=4.37",
    "lightning >=2.1",
    "matplotlib >=3.10",
    "numpy >=2.2, <3.0",
    "onnx >=1.15",
    "onnxscript >=0.3",
    "pandas >=3.0.1",
    "power-spherical >=0.8",
    "scikit-image >=0.25",
    "scipy >=1.11",
    "torch >=2.11",
    "torchvision >=0.26",
    "gaiaxpy >=2.1",
    "pyarrow >=19.0",
    "transformers >=4.40",
    "wandb >=0.20",
    "sphinxcontrib-bibtex>=2.6.3",
    "datasets>=4.8.4",
]

[project.optional-dependencies]
dev = [
    "ipykernel >=6.29",
    "ipywidgets>=8.1.8",
    "pytest >=8.3",
    "pytest-timeout >=2.0",
    "ruff >=0.11",
]
extra = [
    "jupytext >=1.15",
    "pip-licenses >=5.0",
    "pytest-cov >=6.1",
    "scikit-learn >=1.3",
    "tensorboard >=2.15",
]
docs = [
    "myst-parser >=5.0.0",
    "recommonmark >=0.7",
    "sphinx >= 9.1.0",
    "sphinx-autodoc-typehints >= 3.9.11",
    "sphinx-rtd-theme >= 3.0",
    "sphinxcontrib-bibtex>=2.6.3",
]

[project.scripts]
spherinator = 'spherinator.main:main'

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest]
timeout = "300"
testpaths = ['tests']
xfail_strict = true
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:The 'train_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument",
    "ignore:torch.onnx.dynamo_export only implements opset version 18 for now.",
    "ignore:GPU available but not used.",
    "ignore:You requested to overfit but enabled train dataloader shuffling.",
    "ignore::FutureWarning",
]

[tool.pylint.TYPECHECK]
generated-members = 'numpy.*, torch.*'

# [tool.uv.sources]
# torch = [
#     { index = "pytorch-cu126" },
# ]
# torchvision = [
#     { index = "pytorch-cu126" },
# ]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
